Add message icon PNG asset to the project

--- a/FE/src/app/navbar/navbar.component.html
+++ b/FE/src/app/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <section class="container navbar-1">
   <div class="d-flex justify-content-between">
     <div class="col">
-      <a class="logo" href="/">LeadsBus</a>
+      <div class="d-flex align-items-center">
+        <img style="height: 40px" src="../../assets/images/message-icon.png" alt="LeadsBus Logo">
+        <a class="logo ml-2" href="/">LeadsBus</a>
+      </div>
     </div>
     <div class="col show-sm">
       <input id="menu-toggle" type="checkbox" (click)="toggleNav()" />
