--- a/FE/src/app/homepage/homepage.component.html
+++ b/FE/src/app/homepage/homepage.component.html
@@ -21,10 +21,22 @@
     </div>
   </div>
 </section>
-
-<section class="dashboard-preview">
-  <img src="../../assets/images/chat.png" style="border-radius: 20px">
-</section>
+<div class="col-12 col-lg-6 mx-auto mt-5">
+  <div class="d-flex justify-content-center">
+    <div style="width:100%; max-width:600px;">
+      <div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden; border-radius:20px;">
+        <iframe 
+          src="https://www.youtube.com/embed/PXHFXM0b63U" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen
+          style="position:absolute; top:0; left:0; width:100%; height:100%; border-radius:20px;">
+        </iframe>
+      </div>
+    </div>
+  </div>
+</div>
 
 <section class="container">
   <div class="partners">
